# DMMS

./: Serial Comm  UI_SerialComm.py  camera.py  required.txt  testing.py
Arduino/Motor_movement/: Motor_movement.ino
DMMS_UI/: CMakeLists.txt
FinalInterface/: config.py  control.py  files.py  finalInterface.py  main.py  map.py  start.py  testing.py
FinalInterface/Projects/1/: 1.txt
FinalInterface/Projects/t/: t.txt
FinalInterface/Projects/t-1/: t-1.txt
FinalInterface/Projects/t-2/: t-2.txt
FinalInterface/Projects/test/: test.txt
FinalInterface/Projects/test-1/: test-1.txt
FinalInterface/Projects/test-2/: test-2.txt
GPS/: GPS.ino
GPS_TESTING/: GPS_TESTING.ino
GPS_with_bearing_calcs/: GPS_with_bearing_calcs.ino
Serial_Comm/: Serial_Comm.ino
UI/: UI_QT.py  interface.py  position.txt
UI/project/: project.txt
UI_Serial_Comm/: UI_Serial_Comm.ino
testing/: UI.py  camera.py  sTest.py  testUI.py  testing.py
